--- a/scl-php71/php/php-fpm-www.conf
+++ b/scl-php71/php/php-fpm-www.conf
@@ -20,7 +20,7 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-; RPM: apache Choosed to be able to access some dir as httpd
+; RPM: apache user chosen to provide access to the same directories as httpd
 user = apache
 ; RPM: Keep a group allowed to write in log dir.
 group = apache
