--- a/common/Makefile
+++ b/common/Makefile
@@ -126,7 +126,7 @@ REFLECTION: $(NAME).spec
 	php --re $(shell pwd | sed -e 's/.*-//') >REFLECTION
 
 composer:
-	tar xf $(shell spectool -l $(NAME).spec | head -n 1 | sed -e 's:.*/::') --strip-components=1 '*/composer.json' && \
+	tar xf $(shell spectool -l $(NAME).spec | head -n 1 | sed -e 's:.* ::' | sed -e 's:.*/::') --strip-components=1 '*/composer.json' && \
 	mv composer.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME).spec).json
 
 devcomposer:
