php-phpunit-PHPUnit: 5.3.1

--- a/common/Makefile
+++ b/common/Makefile
@@ -127,8 +127,11 @@ REFLECTION: $(NAME).spec
 
 composer:
 	tar xf $(shell spectool -l $(NAME).spec | head -n 1 | sed -e 's:.* ::' | sed -e 's:.*/::') --strip-components=1 '*/composer.json' && \
-	mv composer.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME).spec).json
+	cp composer.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME).spec).json
 
 devcomposer:
+	mv composer.json old.json && \
 	tar xf $(shell spectool -l $(NAME)-dev.spec | head -n 1 | sed -e 's:.*/::') --strip-components=1 '*/composer.json' && \
-	mv composer.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME)-dev.spec).json
+	mv composer.json composer-dev.json && \
+	mv old.json composer.json && \
+	cp composer-dev.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME)-dev.spec).json
