php-zendframework-zend-inputfilter: 2.7.0

--- a/php/zend/php-zendframework-zend-inputfilter/composer.json
+++ b/php/zend/php-zendframework-zend-inputfilter/composer.json
@@ -30,8 +30,12 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "2.6-dev",
-            "dev-develop": "2.7-dev"
+            "dev-master": "2.7-dev",
+            "dev-develop": "2.8-dev"
+        },
+        "zf": {
+            "component": "Zend\\InputFilter",
+            "config-provider": "Zend\\InputFilter\\ConfigProvider"
         }
     },
     "autoload-dev": {
