--- a/php/zend/php-zendframework-zend-form/composer.json
+++ b/php/zend/php-zendframework-zend-form/composer.json
@@ -21,13 +21,13 @@
     "require-dev": {
         "doctrine/annotations": "~1.0",
         "zendframework/zend-cache": "^2.6.1",
-        "zendframework/zend-captcha": "^2.5",
+        "zendframework/zend-captcha": "^2.5.4",
         "zendframework/zend-code": "^2.6",
         "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
         "zendframework/zend-filter": "^2.6",
         "zendframework/zend-i18n": "^2.6",
         "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
-        "zendframework/zend-session": "^2.5",
+        "zendframework/zend-session": "^2.6.2",
         "zendframework/zend-text": "^2.6",
         "zendframework/zend-validator": "^2.6",
         "zendframework/zend-view": "^2.6.2",
@@ -50,8 +50,12 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "2.7-dev",
-            "dev-develop": "2.8-dev"
+            "dev-master": "2.8-dev",
+            "dev-develop": "2.9-dev"
+        },
+        "zf": {
+            "component": "Zend\\Form",
+            "config-provider": "Zend\\Form\\ConfigProvider"
         }
     },
     "autoload-dev": {
