--- a/php/phpunit/php-phpunit-phpcpd/composer.json
+++ b/php/phpunit/php-phpunit-phpcpd/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "php": ">=5.3.3",
         "sebastian/finder-facade": "~1.1",
-        "sebastian/version": "~1.0",
+        "sebastian/version": "~1.0|~2.0",
         "symfony/console": "~2.7|^3.0",
         "phpunit/php-timer": ">=1.0.6",
         "theseer/fdomdocument": "~1.4"
