--- a/php/zend/php-zendframework-zend-form/composer.json
+++ b/php/zend/php-zendframework-zend-form/composer.json
@@ -10,7 +10,10 @@
     "autoload": {
         "psr-4": {
             "Zend\\Form\\": "src/"
-        }
+        },
+        "files": [
+            "autoload/formElementManagerPolyfill.php"
+        ]
     },
     "require": {
         "php": "^5.5 || ^7.0",
@@ -23,6 +26,7 @@
         "zendframework/zend-cache": "^2.6.1",
         "zendframework/zend-captcha": "^2.5.4",
         "zendframework/zend-code": "^2.6",
+        "zendframework/zend-escaper": "^2.5",
         "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
         "zendframework/zend-filter": "^2.6",
         "zendframework/zend-i18n": "^2.6",
@@ -33,7 +37,7 @@
         "zendframework/zend-view": "^2.6.2",
         "zendframework/zendservice-recaptcha": "*",
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0"
+        "phpunit/phpunit": "^4.8"
     },
     "suggest": {
         "zendframework/zend-captcha": "Zend\\Captcha component",
@@ -62,5 +66,16 @@
         "psr-4": {
             "ZendTest\\Form\\": "test/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "upload-coverage": "coveralls -v",
+        "cs-check": "php-cs-fixer --version && php-cs-fixer fix -v --diff --dry-run",
+        "cs-fix": "php-cs-fixer fix -v",
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-clover clover.xml"
     }
 }
