php-aws-sdk3: 3.18.6

--- a/common/Makefile
+++ b/common/Makefile
@@ -126,12 +126,10 @@ REFLECTION: $(NAME).spec
 	php --re $(shell pwd | sed -e 's/.*-//') >REFLECTION
 
 composer:
-	tar xf $(shell spectool -l $(NAME).spec | head -n 1 | sed -e 's:.* ::' | sed -e 's:.*/::') --strip-components=1 '*/composer.json' && \
-	cp composer.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME).spec).json
+	tar xf $(shell spectool -l $(NAME).spec | head -n 1 | sed -e 's:.* ::' | sed -e 's:.*/::') --strip-components=1 '*/composer.json'
 
 devcomposer:
 	mv composer.json old.json && \
 	tar xf $(shell spectool -l $(NAME)-dev.spec | head -n 1 | sed -e 's:.*/::') --strip-components=1 '*/composer.json' && \
 	mv composer.json composer-dev.json && \
-	mv old.json composer.json && \
-	cp composer-dev.json composer-$(shell sed -n '/^Version:/{s/[^0-9]*//;p}' $(NAME)-dev.spec).json
+	mv old.json composer.json
