--- a/php/zend/php-zendframework-zend-ldap/composer.json
+++ b/php/zend/php-zendframework-zend-ldap/composer.json
@@ -13,15 +13,15 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "ext-ldap": "*",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": "^5.5 || ^7.0",
+        "ext-ldap": "*"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-eventmanager": "~2.5",
+        "zendframework/zend-config": "^2.5",
+        "zendframework/zend-eventmanager": "^2.6.3 || ^3.0.1",
+        "zendframework/zend-stdlib": "^2.7 || ^3.0",
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
+        "phpunit/PHPUnit": "^4.5",
         "php-mock/php-mock-phpunit": "~0.3"
     },
     "suggest": {
@@ -39,5 +39,16 @@
         "psr-4": {
             "ZendTest\\Ldap\\": "test/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "upload-coverage": "coveralls -v",
+        "cs-check": "php-cs-fixer --version && php-cs-fixer fix -v --diff --dry-run",
+        "cs-fix": "php-cs-fixer fix -v",
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-clover clover.xml"
     }
 }
