--- a/roundcubemail/composer.json
+++ b/roundcubemail/composer.json
@@ -13,6 +13,10 @@
         },
         {
             "type": "vcs",
+            "url": "https://github.com/roundcube/Net_Sieve.git"
+        },
+        {
+            "type": "vcs",
             "url": "https://git.kolab.org/diffusion/PNL/php-net_ldap.git"
         }
     ],
@@ -22,17 +26,16 @@
         "pear-pear.php.net/net_socket": "~1.0.12",
         "pear-pear.php.net/auth_sasl": "~1.0.6",
         "pear-pear.php.net/net_idna2": "~0.1.1",
-        "pear-pear.php.net/net_sieve": "~1.3.4",
-        "pear-pear.php.net/mail_mime": "~1.9.0",
+        "pear-pear.php.net/mail_mime": "~1.10.0",
         "pear-pear.php.net/net_smtp": "~1.7.1",
-        "patchwork/utf8": "~1.2.3"
+        "pear-pear.php.net/crypt_gpg": "~1.4.1",
+        "roundcube/net_sieve": "~1.5.0"
     },
     "require-dev": {
-        "pear-pear.php.net/crypt_gpg": "*",
         "phpunit/phpunit": "*"
     },
     "suggest": {
-        "pear-pear.php.net/net_ldap2": "~2.1.0 required for connecting to LDAP address books",
+        "pear-pear.php.net/net_ldap2": "~2.2.0 required for connecting to LDAP address books",
         "kolab/Net_LDAP3": "dev-master required for connecting to LDAP address books"
     },
     "minimum-stability": "dev"
