--- a/php/php54/php-fpm.service
+++ b/php/php54/php-fpm.service
@@ -1,3 +1,7 @@
+# It's not recommended to modify this file in-place, because it
+# will be overwritten during upgrades.  If you want to customize,
+# the best way is to use the "systemctl edit" command.
+
 [Unit]
 Description=The PHP FastCGI Process Manager
 After=syslog.target network.target
