--- a/php/php70/php-fpm.service
+++ b/php/php70/php-fpm.service
@@ -1,6 +1,6 @@
-# It's not recommended to modify this file in-place, because it will be
-# overwritten during package upgrades.  If you want to customize, the
-# best way is to create a file "/etc/systemd/system/php-fpm.service".
+# It's not recommended to modify this file in-place, because it
+# will be overwritten during upgrades.  If you want to customize,
+# the best way is to use the "systemctl edit" command.
 
 [Unit]
 Description=The PHP FastCGI Process Manager
