--- a/php/zend/php-zendframework-zend-stdlib/composer.json
+++ b/php/zend/php-zendframework-zend-stdlib/composer.json
@@ -13,31 +13,15 @@
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-hydrator": "~1.1"
+        "php": "^5.5 || ^7.0"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-eventmanager": "~2.5",
-        "zendframework/zend-inputfilter": "~2.5",
-        "zendframework/zend-serializer": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-filter": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0",
         "athletic/athletic": "~0.1"
     },
-    "suggest": {
-        "zendframework/zend-eventmanager": "To support aggregate hydrator usage",
-        "zendframework/zend-serializer": "Zend\\Serializer component",
-        "zendframework/zend-servicemanager": "To support hydrator plugin manager usage",
-        "zendframework/zend-filter": "To support naming strategy hydrator usage"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-release-2.7": "2.7-dev",
             "dev-master": "3.0-dev",
             "dev-develop": "3.1-dev"
         }
