--- a/php/zend/php-zendframework-zend-servicemanager/composer.json
+++ b/php/zend/php-zendframework-zend-servicemanager/composer.json
@@ -3,8 +3,9 @@
     "description": " ",
     "license": "BSD-3-Clause",
     "keywords": [
-        "zf2",
-        "servicemanager"
+        "zf",
+        "servicemanager",
+        "service-manager"
     ],
     "homepage": "https://github.com/zendframework/zend-servicemanager",
     "autoload": {
@@ -17,22 +18,21 @@
         "container-interop/container-interop": "~1.0"
     },
     "require-dev": {
-        "zendframework/zend-di": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "athletic/athletic": "dev-master"
+        "phpunit/phpunit": "^4.6 || ^5.2.10",
+        "ocramius/proxy-manager": "^1.0 || ^2.0",
+        "squizlabs/php_codesniffer": "^2.5.1",
+        "phpbench/phpbench": "^0.10.0"
     },
     "suggest": {
-        "ocramius/proxy-manager": "ProxyManager 0.5.* to handle lazy initialization of services",
-        "zendframework/zend-di": "Zend\\Di component"
+        "ocramius/proxy-manager": "ProxyManager 1.* to handle lazy initialization of services",
+        "zendframework/zend-stdlib": "zend-stdlib ^2.5 if you wish to use the MergeReplaceKey or MergeRemoveKey features in Config instances"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "2.7-dev",
-            "dev-develop": "3.0-dev"
+            "dev-master": "3.0-dev",
+            "dev-develop": "3.1-dev"
         }
     },
     "autoload-dev": {
@@ -40,5 +40,8 @@
             "ZendTest\\ServiceManager\\": "test/",
             "ZendBench\\ServiceManager\\": "benchmarks/"
         }
+    },
+    "provide": {
+        "container-interop/container-interop-implementation": "^1.1"
     }
 }
