--- a/php/zend/php-zendframework-zend-code/composer.json
+++ b/php/zend/php-zendframework-zend-code/composer.json
@@ -17,9 +17,10 @@
         "zendframework/zend-eventmanager": "^2.6 || ^3.0"
     },
     "require-dev": {
+        "ext-phar": "*",
         "doctrine/annotations": "~1.0",
         "zendframework/zend-stdlib": "^2.7 || ^3.0",
-        "fabpot/php-cs-fixer": "1.7.*",
+        "squizlabs/php_codesniffer": "^2.5",
         "phpunit/PHPUnit": "^4.8.21"
     },
     "suggest": {
@@ -30,8 +31,8 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "2.6-dev",
-            "dev-develop": "2.7-dev"
+            "dev-master": "3.0-dev",
+            "dev-develop": "3.1-dev"
         }
     },
     "autoload-dev": {
