--- a/php/zend/php-zendframework-zend-mvc/composer.json
+++ b/php/zend/php-zendframework-zend-mvc/composer.json
@@ -13,63 +13,37 @@
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-eventmanager": "^2.6.2 || ^3.0",
-        "zendframework/zend-servicemanager": "^2.7.5 || ^3.0.3",
-        "zendframework/zend-hydrator": "^1.1 || ^2.1",
-        "zendframework/zend-form": "^2.7",
-        "zendframework/zend-stdlib": "^2.7.5 || ^3.0",
-        "zendframework/zend-psr7bridge": "^0.2",
+        "php": "^5.6 || ^7.0",
+        "zendframework/zend-eventmanager": "^3.0",
+        "zendframework/zend-http": "^2.5.4",
+        "zendframework/zend-modulemanager": "^2.7.1",
+        "zendframework/zend-router": "^3.0.1",
+        "zendframework/zend-servicemanager": "^3.0.3",
+        "zendframework/zend-stdlib": "^3.0",
+        "zendframework/zend-view": "^2.6.7",
         "container-interop/container-interop": "^1.1"
     },
     "require-dev": {
-        "zendframework/zend-authentication": "^2.5.3",
-        "zendframework/zend-cache": "^2.6.1",
-        "zendframework/zend-console": "^2.6",
-        "zendframework/zend-di": "^2.6",
-        "zendframework/zend-filter": "^2.6.1",
-        "zendframework/zend-http": "^2.5.4",
-        "zendframework/zend-i18n": "^2.6",
-        "zendframework/zend-inputfilter": "^2.6",
-        "zendframework/zend-json": "^2.6.1",
-        "zendframework/zend-log": "^2.7.1",
-        "zendframework/zend-modulemanager": "^2.7.1",
-        "zendframework/zend-session": "^2.6.2",
-        "zendframework/zend-serializer": "^2.6.1",
-        "zendframework/zend-text": "^2.6",
-        "zendframework/zend-uri": "^2.5",
-        "zendframework/zend-validator": "^2.6",
-        "zendframework/zend-version": "^2.5",
-        "zendframework/zend-view": "^2.6.3",
-        "friendsofphp/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "^4.5",
-        "sebastian/version": "^1.0.4"
+        "zendframework/zend-json": "^2.6.1 || ^3.0",
+        "zendframework/zend-psr7bridge": "^0.2",
+        "fabpot/php-cs-fixer": "1.7.*",
+        "phpunit/phpunit": "^4.5"
     },
     "suggest": {
-        "zendframework/zend-authentication": "Zend\\Authentication component for Identity plugin",
-        "zendframework/zend-config": "Zend\\Config component",
-        "zendframework/zend-console": "Zend\\Console component",
-        "zendframework/zend-di": "Zend\\Di component",
-        "zendframework/zend-filter": "Zend\\Filter component",
-        "zendframework/zend-http": "Zend\\Http component",
-        "zendframework/zend-i18n": "Zend\\I18n component for translatable segments",
-        "zendframework/zend-inputfilter": "Zend\\Inputfilter component",
-        "zendframework/zend-json": "Zend\\Json component",
-        "zendframework/zend-log": "Zend\\Log component",
-        "zendframework/zend-modulemanager": "Zend\\ModuleManager component",
-        "zendframework/zend-serializer": "Zend\\Serializer component",
-        "zendframework/zend-servicemanager-di": "^1.0.1, if using zend-servicemanager v3 and requiring the zend-di integration",
-        "zendframework/zend-session": "Zend\\Session component for FlashMessenger, PRG, and FPRG plugins",
-        "zendframework/zend-text": "Zend\\Text component",
-        "zendframework/zend-uri": "Zend\\Uri component",
-        "zendframework/zend-validator": "Zend\\Validator component",
-        "zendframework/zend-version": "Zend\\Version component",
-        "zendframework/zend-view": "Zend\\View component"
+        "zendframework/zend-json": "(^2.6.1 || ^3.0) To auto-deserialize JSON body content in AbstractRestfulController extensions, when json_decode is unavailable",
+        "zendframework/zend-mvc-console": "zend-mvc-console provides the ability to expose zend-mvc as a console application",
+        "zendframework/zend-mvc-i18n": "zend-mvc-i18n provides integration with zend-i18n, including a translation bridge and translatable route segments",
+        "zendframework/zend-mvc-plugin-fileprg": "To provide Post/Redirect/Get functionality around forms that container file uploads",
+        "zendframework/zend-mvc-plugin-flashmessenger": "To provide flash messaging capabilities between requests",
+        "zendframework/zend-mvc-plugin-identity": "To access the authenticated identity (per zend-authentication) in controllers",
+        "zendframework/zend-mvc-plugin-prg": "To provide Post/Redirect/Get functionality within controllers",
+        "zendframework/zend-psr7bridge": "(^0.2) To consume PSR-7 middleware within the MVC workflow",
+        "zendframework/zend-servicemanager-di": "zend-servicemanager-di provides utilities for integrating zend-di and zend-servicemanager in your zend-mvc application"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.7-dev",
-            "dev-develop": "3.0-dev"
+            "dev-master": "3.0-dev",
+            "dev-develop": "3.1-dev"
         }
     },
     "autoload-dev": {
