--- a/php/php-composer-ca-bundle/composer.json
+++ b/php/php-composer-ca-bundle/composer.json
@@ -22,6 +22,8 @@
         "issues": "https://github.com/composer/ca-bundle/issues"
     },
     "require": {
+        "ext-openssl": "*",
+        "ext-pcre": "*",
         "php": "^5.3.2 || ^7.0"
     },
     "require-dev": {
