--- a/php/nette/php-kdyby-events/composer.json
+++ b/php/nette/php-kdyby-events/composer.json
@@ -43,7 +43,7 @@
 		"tracy/tracy": "~2.3@dev",
 		"nette/utils": "~2.3@dev",
 
-		"symfony/event-dispatcher": "~2.3",
+		"symfony/event-dispatcher": "~2.3|~3.0",
 
 		"nette/tester": "~1.4"
 	},
@@ -60,7 +60,7 @@
 	},
 	"extra": {
 		"branch-alias": {
-			"dev-master": "2.4-dev"
+			"dev-master": "3.0-dev"
 		}
 	}
 }
