--- a/php/php-consolidation-annotated-command/composer.json
+++ b/php/php-consolidation-annotated-command/composer.json
@@ -23,7 +23,7 @@
         "psr/log": "~1.0",
         "symfony/console": "~2.5|~3.0",
         "symfony/finder": "~2.5|~3.0",
-        "phpdocumentor/reflection-docblock": "~2"
+        "phpdocumentor/reflection-docblock": "^2.0|^3.0.2"
     },
     "require-dev": {
         "consolidation/output-formatters": "~1",
