mock: includes 'base' repo for scl build

--- a/tools/mock/fc21xscl70.cfg
+++ b/tools/mock/fc21xscl70.cfg
@@ -103,9 +103,13 @@ name=rpmfusion-nonfree
 mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-released-21&arch=x86_64
 enabled=0
 
-[result]
-name=result
+[result-scl70fc21x]
+name=result-scl70fc21x
 baseurl=file:/var/lib/mock/scl70fc21x/
+
+[result-fc21x]
+name=result-fc21x
+baseurl=file:/var/lib/mock/fc21x/
 enabled=1
 
 """
