--- a/tools/mock/fc22xscl70.cfg
+++ b/tools/mock/fc22xscl70.cfg
@@ -103,9 +103,13 @@ name=rpmfusion-nonfree
 mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-released-22&arch=x86_64
 enabled=0
 
-[result]
-name=result
+[result-scl70fc22x]
+name=result-scl70fc22x
 baseurl=file:/var/lib/mock/scl70fc22x/
+
+[result-fc22x]
+name=result-fc22x
+baseurl=file:/var/lib/mock/fc22x/
 enabled=1
 
 """
