--- a/tools/mock/fc22xscl71.cfg
+++ b/tools/mock/fc22xscl71.cfg
@@ -104,8 +104,13 @@ mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-r
 enabled=0
 
 [result-scl71fc22x]
-name=result
+name=result-scl71fc22x
 baseurl=file:/var/lib/mock/scl71fc22x/
+enabled=1
+
+[result-fc22x]
+name=result-fc22x
+baseurl=file:/var/lib/mock/fc22x/
 enabled=1
 
 """
