--- a/tools/mock/fc23xscl70.cfg
+++ b/tools/mock/fc23xscl70.cfg
@@ -105,9 +105,13 @@ name=rpmfusion-nonfree
 mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-released-23&arch=x86_64
 enabled=0
 
-[result]
-name=result
+[result-scl70fc23x]
+name=result-scl70fc23x
 baseurl=file:/var/lib/mock/scl70fc23x/
+
+[result-fc23x]
+name=result-fc23x
+baseurl=file:/var/lib/mock/fc23x/
 enabled=1
 
 """
