--- a/tools/mock/fc23xscl71.cfg
+++ b/tools/mock/fc23xscl71.cfg
@@ -106,8 +106,13 @@ mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-r
 enabled=0
 
 [result-scl71fc23x]
-name=result
+name=result-scl71fc23x
 baseurl=file:/var/lib/mock/scl71fc23x/
+enabled=1
+
+[result-fc23x]
+name=result-fc23x
+baseurl=file:/var/lib/mock/fc23x/
 enabled=1
 
 """
