--- a/tools/mock/fc24xscl70.cfg
+++ b/tools/mock/fc24xscl70.cfg
@@ -105,9 +105,13 @@ name=rpmfusion-nonfree
 mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-released-24&arch=x86_64
 enabled=0
 
-[result]
-name=result
+[result-scl70fc24x]
+name=result-scl70fc24x
 baseurl=file:/var/lib/mock/scl70fc24x/
+
+[result-fc24x]
+name=result-fc24x
+baseurl=file:/var/lib/mock/fc24x/
 enabled=1
 
 """
