--- a/tools/mock/fc24xscl71.cfg
+++ b/tools/mock/fc24xscl71.cfg
@@ -106,8 +106,13 @@ mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-r
 enabled=0
 
 [result-scl71fc24x]
-name=result
+name=result-scl71fc24x
 baseurl=file:/var/lib/mock/scl71fc24x/
+enabled=1
+
+[result-fc24x]
+name=result-fc24x
+baseurl=file:/var/lib/mock/fc24x/
 enabled=1
 
 """
