--- a/php/php-akamai-open-edgegrid-client/composer.json
+++ b/php/php-akamai-open-edgegrid-client/composer.json
@@ -23,7 +23,7 @@
         "theseer/phpdox": "~0.8",
         "phploc/phploc": "^2.1",
         "squizlabs/php_codesniffer": "^2.3",
-        "fabpot/php-cs-fixer": "^1.9",
+        "friendsofphp/php-cs-fixer": "^1.9",
         "kherge/box": "^2.5"
     },
     "autoload": {
