--- a/php/zend/php-zendframework-zend-expressive-helpers/composer.json
+++ b/php/zend/php-zendframework-zend-expressive-helpers/composer.json
@@ -12,8 +12,9 @@
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0-dev",
-            "dev-develop": "2.1-dev"
+            "dev-master": "2.1-dev",
+            "dev-develop": "2.2-dev",
+            "dev-dev-3.0.0": "3.0.0-dev"
         }
     },
     "require": {
@@ -25,7 +26,8 @@
     "require-dev": {
         "phpunit/phpunit": "^4.7",
         "squizlabs/php_codesniffer": "^2.3",
-        "zendframework/zend-diactoros": "^1.2"
+        "zendframework/zend-diactoros": "^1.2",
+        "mockery/mockery": "^0.9.5"
     },
     "autoload": {
       "psr-4": {
