--- a/owncloud/owncloud-default-nginx.conf
+++ b/owncloud/owncloud-default-nginx.conf
@@ -10,6 +10,8 @@
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Robots-Tag none;
+        add_header X-Download-Options noopen;
+        add_header X-Permitted-Cross-Domain-Policies none;
 
         # set max upload size
         client_max_body_size 10G;
