php-google-apiclient: downgrade to 1.1.7 (backported from Fedora)

--- a/php/php-google-apiclient/composer.json
+++ b/php/php-google-apiclient/composer.json
@@ -13,11 +13,13 @@
         "squizlabs/php_codesniffer": "~2.3"
     },
     "autoload": {
-        "files": ["src/Google/autoload.php"]
+        "classmap": [
+            "src/"
+        ]
     },
     "extra": {
         "branch-alias": {
-            "dev-v1-master": "1.1.x-dev"
+            "dev-master": "1.1.x-dev"
         }
     }
 }
