--- a/tools/mock/fc25x.cfg
+++ b/tools/mock/fc25x.cfg
@@ -56,8 +56,8 @@ enabled=1
 	
 [updates-testing]
 name=updates-testing
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-testing-f25&arch=x86_64
-#baseurl=http://download.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
+baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
 enabled=1
 
 [remi]
