--- a/tools/mock/fc25x71.cfg
+++ b/tools/mock/fc25x71.cfg
@@ -48,10 +48,8 @@ mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-25&arch=x86_6
 
 [updates-released]
 name=updates
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
-#baseurl=http://ftp.funet.fi/pub/mirrors/ftp.redhat.com/pub/fedora/linux/updates/1/x86_64/
-#	http://mirrors.ircam.fr/pub/fedora/linux/updates/25/x86_64/
-#	http://fr2.rpmfind.net/linux/fedora/updates/25/x86_64/
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
+baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
 enabled=1
 	
 [updates-testing]
