--- a/tools/mock/fc25it.cfg
+++ b/tools/mock/fc25it.cfg
@@ -56,9 +56,9 @@ enabled=1
 
 [updates-testing]
 name=updates-testing
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-testing-f25&arch=i386
-#baseurl=http://download.fedoraproject.org/pub/fedora/linux/updates/testing/25/i386/
-enabled=0
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-testing-f25&arch=i386
+baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/i386
+enabled=1
 
 [remi]
 name=remi public
