--- a/tools/mock/fc25xscl54.cfg
+++ b/tools/mock/fc25xscl54.cfg
@@ -59,9 +59,9 @@ enabled=1
 	
 [updates-testing]
 name=updates-testing
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-testing-f25&arch=x86_64
-#baseurl=http://download.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
-enabled=0
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
+baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
+enabled=1
 
 [remi]
 name=remi public
