--- a/tools/mock/fc25xscl71.cfg
+++ b/tools/mock/fc25xscl71.cfg
@@ -61,9 +61,9 @@ exclude=*.i686
 
 [updates-testing]
 name=updates-testing
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-testing-f25&arch=x86_64
-#baseurl=http://download.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
-enabled=0
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
+baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
+enabled=1
 
 [remi]
 name=remi public
