--- a/tools/mock/fc25xscl70.cfg
+++ b/tools/mock/fc25xscl70.cfg
@@ -2,6 +2,7 @@ config_opts['root'] = 'scl70fc25x'
 config_opts['target_arch'] = 'x86_64'
 config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php70-build'
 config_opts['dist'] = 'fc25'  # only useful for --resultdir variable subst
+config_opts['package_manager'] = 'dnf'
 
 config_opts['plugin_conf']['ccache_enable'] = True
 config_opts['plugin_conf']['ccache_opts']['max_cache_size'] = '1G'
@@ -40,6 +41,8 @@ retries=20
 obsoletes=1
 gpgcheck=0
 assumeyes=1
+fastestmirror=1
+max_parallel_downloads=6
 
 # repos
 
