--- a/php/zend/php-zendframework-zend-code/composer.json
+++ b/php/zend/php-zendframework-zend-code/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "require": {
-        "php": "^5.5 || 7.0.0 - 7.0.4 || ^7.0.6",
+        "php": "^5.6 || 7.0.0 - 7.0.4 || ^7.0.6",
         "zendframework/zend-eventmanager": "^2.6 || ^3.0"
     },
     "require-dev": {
@@ -31,13 +31,24 @@
     "prefer-stable": true,
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0-dev",
-            "dev-develop": "3.1-dev"
+            "dev-master": "3.1-dev",
+            "dev-develop": "3.2-dev"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "ZendTest\\Code\\": "test/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "upload-coverage": "coveralls -v",
+        "cs-check": "phpcs",
+        "cs-fix": "phpcbf",
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     }
 }
