tweak f25 mock config

--- a/tools/mock/fc25xscl55.cfg
+++ b/tools/mock/fc25xscl55.cfg
@@ -42,7 +42,6 @@ gpgcheck=0
 assumeyes=1
 fastestmirror=1
 max_parallel_downloads=6
-metadata_expire=10
 
 # repos
 
@@ -70,16 +69,19 @@ enabled=1
 name=remi public
 baseurl=file:/home/rpmbuild/site/rpms/fedora/25/remi/x86_64/
 enabled=1
+metadata_expire=1
 
 [remi-priv]
 name=remi prive
 baseurl=file:/home/rpmbuild/site/rpms/priv/x86_64/
 enabled=1
+metadata_expire=1
 
 [remi-test]
 name=remi test
 baseurl=file:/home/rpmbuild/site/rpms/fedora/25/test/x86_64/
-enabled=1
+enabled=0
+metadata_expire=1
 
 [remi-dev]
 name=remi dev
@@ -106,9 +108,16 @@ name=rpmfusion-nonfree
 mirrorlist=http://mirrors.rpmfusion.org/mirrorlist?repo=nonfree-fedora-updates-released-25&arch=x86_64
 enabled=0
 
-[result]
+[result-scl55fc25x]
 name=result
 baseurl=file:/var/lib/mock/scl55fc25x/
 enabled=1
+metadata_expire=1
+
+[result-fc25x]
+name=result-fc25x
+baseurl=file:/var/lib/mock/fc25x/
+enabled=1
+metadata_expire=1
 
 """
