tweak f25 mock config again

--- a/tools/mock/fc25xscl71.cfg
+++ b/tools/mock/fc25xscl71.cfg
@@ -2,6 +2,8 @@ config_opts['root'] = 'scl71fc25x'
 config_opts['target_arch'] = 'x86_64'
 config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php71-build'
 config_opts['dist'] = 'fc25'  # only useful for --resultdir variable subst
+config_opts['extra_chroot_dirs'] = [ '/run/lock', ]
+config_opts['releasever'] = '25'
 config_opts['package_manager'] = 'dnf'
 
 config_opts['plugin_conf']['ccache_enable'] = True
@@ -33,13 +35,15 @@ config_opts['macros']['%nophptag']="1"
 
 config_opts['yum.conf'] = """
 [main]
-debuglevel=1
+keepcache=1
+debuglevel=2
 reposdir=/dev/null
 logfile=/var/log/yum.log
 retries=20
 obsoletes=1
 gpgcheck=0
 assumeyes=1
+metadata_expire=10
 fastestmirror=1
 max_parallel_downloads=6
 
@@ -47,14 +51,18 @@ max_parallel_downloads=6
 
 [fedora]
 name=fedora
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-25&arch=x86_64
+metalink=https://mirrors.fedoraproject.org/metalink?repo=fedora-$releasever&arch=$basearch
+failovermethod=priority
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-25&arch=x86_64
 #baseurl=http://fr2.rpmfind.net/linux/fedora/releases/25/Everything/x86_64/os/
 #	http://ftp.funet.fi/pub/mirrors/ftp.redhat.com/pub/fedora/linux/releases/25/Everything/x86_64/os/
 exclude=*.i686
 
 [updates-released]
 name=updates
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
+metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-released-f$releasever&arch=$basearch
+failovermethod=priority
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
 #baseurl=http://ftp.funet.fi/pub/mirrors/ftp.redhat.com/pub/fedora/linux/updates/1/x86_64/
 #	http://mirrors.ircam.fr/pub/fedora/linux/updates/25/x86_64/
 #	http://fr2.rpmfind.net/linux/fedora/updates/25/x86_64/
@@ -63,8 +71,10 @@ exclude=*.i686
 
 [updates-testing]
 name=updates-testing
+metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-testing-f$releasever&arch=$basearch
+failovermethod=priority
 #mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=x86_64
-baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
+#baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/x86_64/
 enabled=1
 
 [remi]
