--- a/tools/mock/fc25i.cfg
+++ b/tools/mock/fc25i.cfg
@@ -1,7 +1,9 @@
 config_opts['root'] = 'fc25i'
 config_opts['target_arch'] = 'i686'
-config_opts['chroot_setup_cmd'] = 'groupinstall buildsys-build'
+config_opts['chroot_setup_cmd'] = 'install @buildsys-build'
 config_opts['dist'] = 'fc25'  # only useful for --resultdir variable subst
+config_opts['extra_chroot_dirs'] = [ '/run/lock', ]
+config_opts['releasever'] = '25'
 config_opts['package_manager'] = 'dnf'
 
 config_opts['plugin_conf']['ccache_enable'] = True
@@ -30,13 +32,15 @@ config_opts['macros']['%runselftest']="1"
 
 config_opts['yum.conf'] = """
 [main]
-debuglevel=1
+keepcache=1
+debuglevel=2
 reposdir=/dev/null
 logfile=/var/log/yum.log
 retries=20
 obsoletes=1
 gpgcheck=0
 assumeyes=1
+metadata_expire=10
 fastestmirror=1
 max_parallel_downloads=6
 
@@ -44,13 +48,17 @@ max_parallel_downloads=6
 
 [fedora]
 name=fedora
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-25&arch=i386
+metalink=https://mirrors.fedoraproject.org/metalink?repo=fedora-$releasever&arch=$basearch
+failovermethod=priority
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=fedora-25&arch=i386
 #baseurl=http://fr2.rpmfind.net/linux/fedora/releases/25/Everything/i386/os/
 #	http://ftp.funet.fi/pub/mirrors/ftp.redhat.com/pub/fedora/linux/releases/25/Everything/i386/os/
 
 [updates-released]
 name=updates
-mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=i386
+metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-released-f$releasever&arch=$basearch
+failovermethod=priority
+#mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-released-f25&arch=i386
 #baseurl=http://ftp.funet.fi/pub/mirrors/ftp.redhat.com/pub/fedora/linux/updates/25/i386/
 #	http://mirrors.ircam.fr/pub/fedora/linux/updates/25/i386/
 #	http://fr2.rpmfind.net/linux/fedora/updates/25/i386/
@@ -58,8 +66,10 @@ enabled=1
 
 [updates-testing]
 name=updates-testing
+metalink=https://mirrors.fedoraproject.org/metalink?repo=updates-testing-f$releasever&arch=$basearch
+failovermethod=priority
 #mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=updates-testing-f25&arch=i386
-baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/i386
+#baseurl=http://dl.fedoraproject.org/pub/fedora/linux/updates/testing/25/i386
 enabled=1
 
 [remi]
