--- a/php/php-consolidation-output-formatters/composer.json
+++ b/php/php-consolidation-output-formatters/composer.json
@@ -20,16 +20,22 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "symfony/console": "~2.5|~3.0"
+        "symfony/console": "~2.5|~3.0",
+        "symfony/finder": "~2.5|~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "4.*",
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "2.*"
     },
+    "scripts": {
+        "cs": "phpcs --standard=PSR2 -n src",
+        "cbf": "phpcbf --standard=PSR2 -n src",
+        "test": "phpunit --colors=always"
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.x-dev"
+            "dev-master": "2.x-dev"
         }
     }
 }
