php 7.1: sync provided ini with upstream

--- a/php/php71/10-opcache.ini
+++ b/php/php71/10-opcache.ini
@@ -105,3 +105,14 @@ opcache.blacklist_filename=/etc/php.d/opcache*.blacklist
 
 ; Enables or disables checksum validation when script loaded from file cache.
 ;opcache.file_cache_consistency_checks=1
+
+; Implies opcache.file_cache_only=1 for a certain process that failed to
+; reattach to the shared memory (for Windows only). Explicitly enabled file
+; cache is required.
+;opcache.file_cache_fallback=1
+
+; Validate cached file permissions.
+; opcache.validate_permission=0
+
+; Prevent name collisions in chroot'ed environment.
+; opcache.validate_root=0
