--- a/zephir-parser/Makefile
+++ b/zephir-parser/Makefile
@@ -1,3 +1,7 @@
 SRCDIR := $(shell pwd)
 NAME := $(shell basename $(SRCDIR))
 include ../common/Makefile
+
+refl:
+	php -n -d extension=zephir_parser.so --re zephir_parser >REFLECTION
+
