php-akamai-open-edgegrid-client: 0.6.2

--- a/php/php-akamai-open-edgegrid-client/composer.json
+++ b/php/php-akamai-open-edgegrid-client/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.5",
-        "akamai-open/edgegrid-auth": "^0.6.0",
-        "guzzlehttp/guzzle": "~6.0",
+        "akamai-open/edgegrid-auth": "^0.6",
+        "guzzlehttp/guzzle": "^6.0",
         "psr/log": "^1.0",
         "monolog/monolog": "^1.15",
         "league/climate": "~3.2"
