--- a/tools/mock/el7xscl71.cfg
+++ b/tools/mock/el7xscl71.cfg
@@ -1,6 +1,7 @@
 config_opts['root'] = 'scl71el7x'
 config_opts['target_arch'] = 'x86_64'
-config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php71-build devtoolset-6-toolchain'
+#config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php71-build devtoolset-6-toolchain'
+config_opts['chroot_setup_cmd'] = 'install @buildsys-build scl-utils-build php71-build'
 config_opts['dist'] = 'el7'  # only useful for --resultdir variable subst
 
 config_opts['plugin_conf']['ccache_enable'] = True
@@ -27,9 +28,9 @@ config_opts['macros']['%_with_ibase']="1"
 config_opts['macros']['%_with_oci8']="1"
 config_opts['macros']['%runselftest']="1"
 config_opts['macros']['%nophptag']="1"
-config_opts['macros']['%dtsversion']="6"
-config_opts['macros']['%dtsenable']="source /opt/rh/devtoolset-6/enable"
-config_opts['macros']['%dtsprefix']="devtoolset-6-"
+#config_opts['macros']['%dtsversion']="6"
+#config_opts['macros']['%dtsenable']="source /opt/rh/devtoolset-6/enable"
+#config_opts['macros']['%dtsprefix']="devtoolset-6-"
 
 config_opts['yum.conf'] = """
 [main]
@@ -123,7 +124,7 @@ enabled=1
 [centos-sclo-rh]
 name=CentOS-7 - SCLo rh
 baseurl=http://mirror.centos.org/centos/7/sclo/$basearch/rh/
-enabled=1
+enabled=0
 
 
 """
