--- a/scl-php56/php/php-fpm-www.conf
+++ b/scl-php56/php/php-fpm-www.conf
@@ -411,7 +411,7 @@ php_admin_value[error_log] = /var/log/php-fpm/www-error.log
 php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 128M
 
-; Set the following data paths to directories owned by the FPM process user
+; Set the following data paths to directories owned by the FPM process user.
 ;
 ; Do not change the ownership of existing system directories, if the process
 ; user does not have write permission, create dedicated directories for this
