ensure damned epel-rpm-macros never used

--- a/tools/mock/el6i71.cfg
+++ b/tools/mock/el6i71.cfg
@@ -70,7 +70,8 @@ failovermethod=priority
 name=epel
 mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=epel-6&arch=i386
 failovermethod=priority
-exclude=perl-Test-Exception
+exclude=perl-Test-Exception epel-rpm-macros
+
 
 [testing]
 name=epel-testing
