--- a/tools/mock/el6t56.cfg
+++ b/tools/mock/el6t56.cfg
@@ -59,6 +59,7 @@ name=BaseOS
 enabled=0
 mirrorlist=http://mirrorlist.centos.org/?release=6&arch=x86_64&repo=os
 failovermethod=priority
+exclude=epel-rpm-macros
 
 [updates]
 name=updates
