--- a/tools/mock/el6x.cfg
+++ b/tools/mock/el6x.cfg
@@ -70,6 +70,7 @@ failovermethod=priority
 name=epel
 mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=epel-6&arch=x86_64
 failovermethod=priority
+exclude=epel-rpm-macros
 
 [testing]
 name=epel-testing
