--- a/tools/mock/el7x.cfg
+++ b/tools/mock/el7x.cfg
@@ -70,6 +70,7 @@ enabled=0
 name=epel
 mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=epel-7&arch=x86_64
 failovermethod=priority
+exclude=epel-rpm-macros
 enabled=1
 
 [epel-testing]
