--- a/tools/mock/el7xscl71.cfg
+++ b/tools/mock/el7xscl71.cfg
@@ -76,6 +76,7 @@ enabled=0
 name=epel
 mirrorlist=http://mirrors.fedoraproject.org/mirrorlist?repo=epel-7&arch=x86_64
 failovermethod=priority
+exclude=epel-rpm-macros
 enabled=1
 
 [epel-testing]
