php-phpmyadmin-shapefile: 2.0

--- a/php/php-phpmyadmin-shapefile/composer.json
+++ b/php/php-phpmyadmin-shapefile/composer.json
@@ -26,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ShapeFile\\": "src"
+            "PhpMyAdmin\\ShapeFile\\": "src"
         }
     }
 }
