--- a/php/php-phpmyadmin-motranslator/composer.json
+++ b/php/php-phpmyadmin-motranslator/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "MoTranslator\\": "src"
+            "PhpMyAdmin\\MoTranslator\\": "src"
         }
     }
 }
